# bumperbot_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumperbot_controller/lib/bumperbot_controller/: teclado
install/bumperbot_controller/share/bumperbot_controller/: local_setup.sh  package.sh
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh
install/bumperbot_description/share/bumperbot_description/: package.sh
install/bumperbot_msgs/share/bumperbot_msgs/: package.sh
install/bumperbot_py_examples/lib/bumperbot_py_examples/: simple_controller
log/: latest_build
src/bumperbot_controller/: CMakeLists.txt
src/bumperbot_controller/src/: teclado.cpp
src/bumperbot_description/: CMakeLists.txt
src/bumperbot_description/launch/: display.launch.py
src/bumperbot_description/urdf/: bumperbot.urdf.xacro
src/bumperbot_msgs/: CMakeLists.txt
src/bumperbot_py_examples/: setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_tf_kinematics.py
src/bumperbot_utils/: package.xml  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/bumperbot_description/share/bumperbot_description/: package.sh  package.xml
src/install/bumperbot_description/share/bumperbot_description/launch/: gazebo.launch.py
src/install/bumperbot_description/share/bumperbot_description/rviz/: display.rviz
src/install/bumperbot_description/share/bumperbot_description/urdf/: bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
src/log/: latest_build
(+23 files in other folders)
