<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bumperbot_description</name>
  <version>0.0.0</version>
  <description>Bumperbot robot description package</description>
  <maintainer email="pepperumo@todo.todo">pepperumo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Required runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <!-- Conditional dependencies for different ROS 2 distributions -->
  <exec_depend condition="$ROS_DISTRO>=iron">gz_ros2_control</exec_depend>
  <exec_depend condition="$ROS_DISTRO==humble">ign_ros2_control</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Add gazebo model path export -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>